--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>tomcat-embed-el</artifactId>
             <version>8.5.38</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>embeddedTomcatSample</finalName>
