--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8 </target>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compiletests</id>
@@ -120,7 +124,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
