--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <error-page>
+        <error-code>404</error-code>
         <location>/404.jsp</location>
     </error-page>
+
+    <error-page>
+        <location>/login.jsp</location>
+    </error-page>
+
+
 
     <welcome-file-list>
         <welcome-file>login.jsp</welcome-file>
